# WazabiEDR_Driver

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile.toml  README.md  WazabiEDR_Agent.inx  WazabiEDR_Driver.inx  build-host.ps1  build.ps1  build.rs
.claude/: settings.local.json
.github/workflows/: build.yml
doc/github/: cicd.md
doc/project/: Main.md  irp.md
doc/reference/: event-types.md
doc/usage/: building.md  installing-driver.md
scripts/: Install-Driver.ps1
src/: events.rs  lib.rs  state.rs
src/callbacks/: header.rs  image.rs  mod.rs  object.rs  process.rs  registry.rs  thread.rs
src/ipc/: dispatch.rs  irp.rs  mod.rs
src/queue/: mod.rs  ring.rs  submit.rs
src/util/: mod.rs  spin_lock.rs  strings.rs  sync_cell.rs
